--- a/disponibilidad.html
+++ b/disponibilidad.html
@@ -49,7 +49,7 @@ requeridos durante un intervalo de tiempo especificado. Cuando se
 hace referencia al hardware, hay una expresión conocida que se usa
 para derivar la disponibilidad en estado estable:</p>
 <br>
-                        <img src="img/1a.png" alt="">
+                        <img src="img/1a.jpg" alt="">
                         <p>donde MTBF se refiere al tiempo medio entre fallas y MTTR se refiere
 al tiempo medio para reparar.</p>
 <br>
@@ -59,7 +59,7 @@ al tiempo medio para reparar.</p>
 de tres categorías: detección de fallas, recuperación de fallas y
 prevención de fallas.</p>
 <br>
-<img src="img/4.png">
+<img src="img/4.jpg">
 
 <br> <br>
  
@@ -127,7 +127,7 @@ principal, entonces (asumiendo que el modelo del árbol de fallas está completo
 se han producido una o más de las fallas contribuyentes, y se puede usar el árbol
 de fallas para rastrearlo e iniciar las reparaciones.</p>
 <br>
-<img src="img/1e.png">
+<img src="img/1e.jpg">
                     </div>
                 </div>
             </div>
