--- a/interoperabilidad.html
+++ b/interoperabilidad.html
@@ -44,7 +44,7 @@ intercambiar datos (interoperabilidad sintáctica) sino también la
 capacidad de interpretar correctamente los datos que se intercambian
 (interoperabilidad semántica).</p>
 
-<p>la interoperabilidad no es una
+<p>La interoperabilidad no es una
 proposición de sí o no, sino que tiene matices de significado. Existen</p>
 <br>
                 <table class="table table-bordered">
@@ -87,7 +87,7 @@ en tiempo de ejecución o se conocen antes del tiempo de ejecución.</td>
     </tr>
   </tbody>
 </table>
-                        <img src="img/1i.png" alt="">
+                        <img src="img/1i.jpg" alt="">
                         <br>
 
 
@@ -95,7 +95,7 @@ en tiempo de ejecución o se conocen antes del tiempo de ejecución.</td>
 de tres categorías: detección de fallas, recuperación de fallas y
 prevención de fallas. La</p>
 <br>
-<img src="img/1b.png">
+<img src="img/1b.jpg">
 
 <br> <br>
  
