--- a/modificalidad.html
+++ b/modificalidad.html
@@ -83,14 +83,14 @@ en tiempo de ejecución o se conocen antes del tiempo de ejecución.</td>
     </tr>
   </tbody>
 </table>
-                        <img src="img/as.png" alt="">
+                        <img src="img/as.jpg" alt="">
                         <br>
 
 
 <p>enumera los elementos del escenario general que
 caracterizan la modificabilidad.</p>
 <br>
-<img src="img/aw.png">
+<img src="img/aw.jpg">
 
 <br> <br>
  
